change variable name to match norms
-change variable name to match norms
-add check_ID date event to all pools
-add logics about check_ID message
-made some clean

--- a/commands.html
+++ b/commands.html
@@ -7,9 +7,10 @@
         <link type="text/css" rel="stylesheet" href="src/css/style.css">
     </head>
     <body>
-        <h1 id="commands">$42julydays</h1>
-        <h1 id="commands">$42augustdays</h1>
-        <h1 id="commands">$42septemberdays</h1>
+        <h1 id="commands">$42juillet</h1>
+        <h1 id="commands">$42août</h1>
+        <h1 id="commands">$42septembre</h1>
+        <h1 id="commands">$42alldays</h1>
         <h1 id="commands">$Help</h1>
         <h1 id="commands">$Github</h1>
         <h1 id="commands">$Version</h1>
